# cfg-dataset-gen

./: Cargo.toml  README.md
benches/: my_benchmark.rs
grammars/: amb.y  lr1.y  lr1_large.y  lr1_medium.y
grammars/pl/: test_pl.acc  test_pl.y
python/: CFG.py  Dockerfile  MUTAG.py  k_fold.py  model.py  repeate_k_fold.py  train_test.py
src/: lib.rs  main.rs
src/cfg/: dataset.rs  graph.rs  mod.rs  mutate.rs  parse.rs
