cargo-features = ["edition2021"]
[package]
name = "cfg_dataset_gen"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2021"

[lib]
name = "cfg_dataset_gen"
path = "src/lib.rs"

[[bin]]
name = "cfg_dataset_gen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"
zip = "0.5.13"
tempdir = "0.3.7"
cfgz = { git = "https://github.com/nvasudevan/cfgz", branch = "main"}
sinbad_rs = { git = "https://github.com/nvasudevan/sinbad_rs", branch = "main"}
